# study-hours-estimator

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.py  notebook.ipynb  pyproject.toml  requirements.txt  study-hours-notebook.ipynb
src/: form_flask_select.py  form_handler.py  script.py  train.py
src/static/: style.css
src/templates/: app.html  form_handler.html  index.html
