[project]
name = "study-hours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "flask-wtf>=1.2.2",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=2.1.2",
]

[dependency-groups]
dev = [
    "awsebcli>=3.21.0",
]
